Fix: Image not showing issue

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,5 +1,5 @@
 .searchbar input[type='search'] {
-  background-image: url("../img/destination.svg");
+  background-image: url("../svg/destination.svg");
 }
 
 .grade-selected {
